feat: add sounds for keys

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
 </head>
 <body>
+    <audio id="ruSound" src="./meow.mp3"></audio>
+    <audio id="enSound" src="./laser.mp3"></audio>
+    <audio id="fnSound" src="./pew.mp3"></audio>
+    <audio id="numSound" src="./wilhelm.mp3"></audio>
+
     <script src="./scripts/script.js" type="module"></script>
 </body>
 </html>
