feat: add spec buttons & spunds for it

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,20 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/png">
 </head>
 <body>
-    <audio id="ruSound" src="./meow.mp3"></audio>
-    <audio id="enSound" src="./laser.mp3"></audio>
-    <audio id="fnSound" src="./pew.mp3"></audio>
-    <audio id="numSound" src="./wilhelm.mp3"></audio>
+  <audio id="ruSound" src="./meow.mp3"></audio>
+  <audio id="enSound" src="./laser.mp3"></audio>
+  <audio id="fnSound" src="./pew.mp3"></audio>
+  <audio id="numSound" src="./wilhelm.mp3"></audio>
+  
+  <audio id="micSound" src="./mic.mp3"></audio>
+  <audio id="ghostSound" src="./ghost.mp3"></audio>
+  <audio id="langSound" src="./vzz.mp3"></audio>
+  <audio id="ctrlSound" src="./puk.mp3"></audio>
+  <audio id="shiftSound" src="./laser2.mp3"></audio>
+  <audio id="altSound" src="./iphone.mp3"></audio>
+  <audio id="capsSound" src="./car_alarm.mp3"></audio>
+  <audio id="tabSound" src="./03.mp3"></audio>
+  <audio id="closeSound" src="./power-down.mp3"></audio>
 
     <script src="./scripts/script.js" type="module"></script>
 </body>
