feat: add sound for Enter & Backspace

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <audio id="ruSound" src="./meow.mp3"></audio>
+  <audio id="enterSound" src="./water.mp3"></audio>
   <audio id="enSound" src="./laser.mp3"></audio>
   <audio id="fnSound" src="./pew.mp3"></audio>
   <audio id="numSound" src="./wilhelm.mp3"></audio>
@@ -21,6 +22,7 @@
   <audio id="capsSound" src="./car_alarm.mp3"></audio>
   <audio id="tabSound" src="./03.mp3"></audio>
   <audio id="closeSound" src="./power-down.mp3"></audio>
+  <audio id="backspaceSound" src="./alarm.mp3"></audio>
 
     <script src="./scripts/script.js" type="module"></script>
 </body>
